--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "date": "2024-Aug-20",
   "source": "https://www.federalreserve.gov/releases/h15/",
-  "rate": "5.33",
-  "seed": 1996424304
+  "seed": 1061499973,
+  "date": "2024-Aug-20",
+  "rate": "5.33"
 }
