--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "source": "https://www.federalreserve.gov/releases/h15/",
-  "seed": 1061499973,
+  "rate": "5.33",
+  "seed": 205909447,
   "date": "2024-Aug-20",
-  "rate": "5.33"
+  "source": "https://www.federalreserve.gov/releases/h15/"
 }
