--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "seed": 1294432620,
-  "date": "2024-Aug-20",
   "source": "https://www.federalreserve.gov/releases/h15/",
-  "rate": "5.33"
+  "rate": "5.33",
+  "seed": 104881821,
+  "date": "2024-Aug-21"
 }
