--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "seed": 762580741,
-  "rate": "5.33",
+  "seed": 1798992517,
   "source": "https://www.federalreserve.gov/releases/h15/",
-  "date": "2024-Aug-21"
+  "date": "2024-Aug-21",
+  "rate": "5.33"
 }
