--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "rate": "5.33",
-  "date": "2024-Aug-21",
+  "seed": 223340999,
   "source": "https://www.federalreserve.gov/releases/h15/",
-  "seed": 482396907
+  "rate": "5.33",
+  "date": "2024-Aug-21"
 }
