--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "seed": 223340999,
+  "date": "2024-Aug-21",
   "source": "https://www.federalreserve.gov/releases/h15/",
   "rate": "5.33",
-  "date": "2024-Aug-21"
+  "seed": 1401348038
 }
