--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "date": "2024-Aug-21",
   "source": "https://www.federalreserve.gov/releases/h15/",
-  "rate": "5.33",
-  "seed": 1401348038
+  "seed": 531362734,
+  "date": "2024-Aug-21",
+  "rate": "5.33"
 }
