--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "source": "https://www.federalreserve.gov/releases/h15/",
-  "seed": 2008333567,
   "date": "2024-Aug-21",
-  "rate": "5.33"
+  "source": "https://www.federalreserve.gov/releases/h15/",
+  "rate": "5.33",
+  "seed": 1321278840
 }
