--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
+  "seed": 1978071292,
+  "date": "2024-Aug-22",
   "rate": "5.33",
-  "source": "https://www.federalreserve.gov/releases/h15/",
-  "seed": 1510509146,
-  "date": "2024-Aug-22"
+  "source": "https://www.federalreserve.gov/releases/h15/"
 }
