--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
   "date": "2024-Aug-22",
-  "source": "https://www.federalreserve.gov/releases/h15/",
   "rate": "5.33",
-  "seed": 136877235
+  "seed": 1809330473,
+  "source": "https://www.federalreserve.gov/releases/h15/"
 }
