--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
+  "seed": 124520771,
   "rate": "5.33",
-  "source": "https://www.federalreserve.gov/releases/h15/",
-  "seed": 1974567936,
-  "date": "2024-Aug-27"
+  "date": "2024-Aug-27",
+  "source": "https://www.federalreserve.gov/releases/h15/"
 }
