--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
   "rate": "5.33",
-  "source": "https://www.federalreserve.gov/releases/h15/",
-  "seed": 882851608,
-  "date": "2024-Aug-27"
+  "date": "2024-Aug-27",
+  "seed": 1825732013,
+  "source": "https://www.federalreserve.gov/releases/h15/"
 }
