--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "seed": 877808595,
-  "rate": "5.33",
   "date": "2024-Aug-27",
-  "source": "https://www.federalreserve.gov/releases/h15/"
+  "rate": "5.33",
+  "source": "https://www.federalreserve.gov/releases/h15/",
+  "seed": 881614822
 }
