--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "date": "2024-Aug-27",
-  "rate": "5.33",
   "source": "https://www.federalreserve.gov/releases/h15/",
-  "seed": 881614822
+  "seed": 2089096000,
+  "rate": "5.33",
+  "date": "2024-Aug-27"
 }
