--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
+  "seed": 1715689303,
+  "date": "2024-Aug-28",
   "source": "https://www.federalreserve.gov/releases/h15/",
-  "seed": 2089096000,
-  "rate": "5.33",
-  "date": "2024-Aug-27"
+  "rate": "5.33"
 }
