--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
+  "rate": "5.33",
+  "seed": 1229175633,
   "source": "https://www.federalreserve.gov/releases/h15/",
-  "seed": 1341542086,
-  "date": "2024-Aug-28",
-  "rate": "5.33"
+  "date": "2024-Aug-28"
 }
