--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
+  "date": "2024-Aug-28",
   "rate": "5.33",
-  "seed": 1229175633,
-  "source": "https://www.federalreserve.gov/releases/h15/",
-  "date": "2024-Aug-28"
+  "seed": 835642939,
+  "source": "https://www.federalreserve.gov/releases/h15/"
 }
