--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
   "rate": "5.33",
-  "seed": 1257608402,
-  "source": "https://www.federalreserve.gov/releases/h15/",
-  "date": "2024-Aug-28"
+  "seed": 320993748,
+  "date": "2024-Aug-28",
+  "source": "https://www.federalreserve.gov/releases/h15/"
 }
