--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
+  "seed": 939423285,
   "date": "2024-Aug-28",
-  "rate": "5.33",
   "source": "https://www.federalreserve.gov/releases/h15/",
-  "seed": 1950791137
+  "rate": "5.33"
 }
