--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "date": "2024-Aug-28",
-  "seed": 884700794,
+  "rate": "5.33",
   "source": "https://www.federalreserve.gov/releases/h15/",
-  "rate": "5.33"
+  "date": "2024-Aug-28",
+  "seed": 474671257
 }
