--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "source": "https://www.federalreserve.gov/releases/h15/",
-  "rate": "5.33",
   "date": "2024-Aug-28",
-  "seed": 1978210782
+  "rate": "5.33",
+  "seed": 1005049558,
+  "source": "https://www.federalreserve.gov/releases/h15/"
 }
