--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "rate": "5.33",
   "source": "https://www.federalreserve.gov/releases/h15/",
+  "seed": 1604431357,
   "date": "2024-Aug-29",
-  "seed": 1164863673
+  "rate": "5.33"
 }
