--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
+  "seed": 1750067150,
   "rate": "5.33",
-  "seed": 887705501,
-  "date": "2024-Aug-29",
-  "source": "https://www.federalreserve.gov/releases/h15/"
+  "source": "https://www.federalreserve.gov/releases/h15/",
+  "date": "2024-Aug-29"
 }
