--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
+  "rate": "5.33",
   "source": "https://www.federalreserve.gov/releases/h15/",
   "date": "2024-Aug-29",
-  "seed": 524070015,
-  "rate": "5.33"
+  "seed": 1869012232
 }
