--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
+  "seed": 98764539,
   "rate": "5.33",
-  "date": "2024-Aug-29",
-  "seed": 1734160266,
-  "source": "https://www.federalreserve.gov/releases/h15/"
+  "source": "https://www.federalreserve.gov/releases/h15/",
+  "date": "2024-Aug-29"
 }
