--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
+  "date": "2024-Aug-29",
+  "seed": 1841054945,
   "source": "https://www.federalreserve.gov/releases/h15/",
-  "rate": "5.33",
-  "seed": 438644667,
-  "date": "2024-Aug-29"
+  "rate": "5.33"
 }
