--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
   "source": "https://www.federalreserve.gov/releases/h15/",
-  "date": "2024-Aug-29",
-  "seed": 1498434788,
-  "rate": "5.33"
+  "seed": 203931077,
+  "rate": "5.33",
+  "date": "2024-Aug-29"
 }
