--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "date": "2024-Aug-29",
+  "date": "2024-Sep-2*",
   "rate": "5.33",
   "source": "https://www.federalreserve.gov/releases/h15/",
-  "seed": 375662225
+  "seed": 228966626
 }
