--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "seed": 807055155,
+  "rate": "5.33",
   "source": "https://www.federalreserve.gov/releases/h15/",
-  "date": "2024-Sep-2*",
-  "rate": "5.33"
+  "seed": 402494367,
+  "date": "2024-Sep-2*"
 }
