--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "rate": "5.33",
   "date": "2024-Sep-2*",
   "source": "https://www.federalreserve.gov/releases/h15/",
-  "seed": 405738888
+  "seed": 1276844538,
+  "rate": "5.33"
 }
