--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "seed": 1248989489,
+  "seed": 1623056568,
   "source": "https://www.federalreserve.gov/releases/h15/",
-  "date": "2024-Sep-2*",
-  "rate": "5.33"
+  "rate": "5.33",
+  "date": "2024-Sep-2*"
 }
