--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
   "source": "https://www.federalreserve.gov/releases/h15/",
   "rate": "5.33",
-  "seed": 1730698793,
-  "date": "2024-Sep-2*"
+  "date": "2024-Sep-2*",
+  "seed": 1229214148
 }
