--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
+  "date": "2024-Sep-2*",
+  "seed": 774735206,
   "rate": "5.33",
-  "seed": 919253811,
-  "source": "https://www.federalreserve.gov/releases/h15/",
-  "date": "2024-Sep-2*"
+  "source": "https://www.federalreserve.gov/releases/h15/"
 }
