--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
+  "seed": 414634388,
+  "date": "2024-Sep-3",
   "source": "https://www.federalreserve.gov/releases/h15/",
-  "rate": "5.33",
-  "seed": 2124363431,
-  "date": "2024-Sep-3"
+  "rate": "5.33"
 }
