--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "rate": "5.33",
-  "date": "2024-Sep-3",
+  "seed": 1594809195,
   "source": "https://www.federalreserve.gov/releases/h15/",
-  "seed": 1831456639
+  "date": "2024-Sep-3",
+  "rate": "5.33"
 }
