--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
+  "rate": "5.33",
+  "seed": 1558514570,
   "source": "https://www.federalreserve.gov/releases/h15/",
-  "seed": 903321301,
-  "date": "2024-Sep-3",
-  "rate": "5.33"
+  "date": "2024-Sep-3"
 }
