--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "rate": "5.33",
-  "date": "2024-Sep-3",
+  "seed": 144467336,
+  "date": "2024-Sep-4",
   "source": "https://www.federalreserve.gov/releases/h15/",
-  "seed": 638706639
+  "rate": "5.33"
 }
