--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "source": "https://www.federalreserve.gov/releases/h15/",
+  "seed": 350981923,
+  "date": "2024-Sep-4",
   "rate": "5.33",
-  "seed": 225694398,
-  "date": "2024-Sep-4"
+  "source": "https://www.federalreserve.gov/releases/h15/"
 }
