--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "rate": "5.33",
-  "seed": 25796751,
   "source": "https://www.federalreserve.gov/releases/h15/",
-  "date": "2024-Sep-4"
+  "date": "2024-Sep-4",
+  "rate": "5.33",
+  "seed": 1279453862
 }
