--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "source": "https://www.federalreserve.gov/releases/h15/",
   "date": "2024-Sep-4",
-  "rate": "5.33",
-  "seed": 1279453862
+  "seed": 300658337,
+  "source": "https://www.federalreserve.gov/releases/h15/",
+  "rate": "5.33"
 }
