--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
+  "rate": "5.33",
   "date": "2024-Sep-4",
-  "seed": 1404029243,
   "source": "https://www.federalreserve.gov/releases/h15/",
-  "rate": "5.33"
+  "seed": 1530637322
 }
