--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "rate": "5.33",
-  "date": "2024-Sep-4",
+  "seed": 652240926,
   "source": "https://www.federalreserve.gov/releases/h15/",
-  "seed": 1530637322
+  "date": "2024-Sep-4",
+  "rate": "5.33"
 }
