--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "source": "https://www.federalreserve.gov/releases/h15/",
+  "seed": 2095235291,
   "date": "2024-Sep-5",
-  "seed": 866107060,
-  "rate": "5.33"
+  "rate": "5.33",
+  "source": "https://www.federalreserve.gov/releases/h15/"
 }
