--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "date": "2024-Sep-5",
-  "seed": 1310177753,
+  "source": "https://www.federalreserve.gov/releases/h15/",
+  "seed": 1204484488,
   "rate": "5.33",
-  "source": "https://www.federalreserve.gov/releases/h15/"
+  "date": "2024-Sep-5"
 }
