--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "seed": 80782184,
-  "rate": "5.33",
+  "seed": 1921785286,
   "source": "https://www.federalreserve.gov/releases/h15/",
-  "date": "2024-Sep-5"
+  "date": "2024-Sep-5",
+  "rate": "5.33"
 }
