--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "source": "https://www.federalreserve.gov/releases/h15/",
-  "seed": 1052516731,
+  "seed": 1484970514,
   "rate": "5.33",
-  "date": "2024-Sep-5"
+  "date": "2024-Sep-5",
+  "source": "https://www.federalreserve.gov/releases/h15/"
 }
