--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "seed": 1484970514,
+  "seed": 256673439,
   "rate": "5.33",
-  "date": "2024-Sep-5",
-  "source": "https://www.federalreserve.gov/releases/h15/"
+  "source": "https://www.federalreserve.gov/releases/h15/",
+  "date": "2024-Sep-5"
 }
