--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "rate": "5.33",
+  "seed": 576571234,
+  "source": "https://www.federalreserve.gov/releases/h15/",
   "date": "2024-Sep-5",
-  "seed": 1258345104,
-  "source": "https://www.federalreserve.gov/releases/h15/"
+  "rate": "5.33"
 }
