--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "seed": 1106814445,
-  "date": "2024-Sep-5",
+  "rate": "5.33",
   "source": "https://www.federalreserve.gov/releases/h15/",
-  "rate": "5.33"
+  "date": "2024-Sep-6",
+  "seed": 199927979
 }
