--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "date": "2024-Sep-6",
-  "source": "https://www.federalreserve.gov/releases/h15/",
+  "seed": 1538546663,
   "rate": "5.33",
-  "seed": 712526220
+  "date": "2024-Sep-6",
+  "source": "https://www.federalreserve.gov/releases/h15/"
 }
