--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "rate": "5.33",
-  "seed": 2130173316,
   "source": "https://www.federalreserve.gov/releases/h15/",
-  "date": "2024-Sep-6"
+  "seed": 304772904,
+  "date": "2024-Sep-6",
+  "rate": "5.33"
 }
