--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
+  "seed": 655820451,
   "date": "2024-Sep-6",
   "rate": "5.33",
-  "source": "https://www.federalreserve.gov/releases/h15/",
-  "seed": 235792080
+  "source": "https://www.federalreserve.gov/releases/h15/"
 }
