--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "rate": "5.33",
+  "seed": 1356104875,
   "date": "2024-Sep-9",
   "source": "https://www.federalreserve.gov/releases/h15/",
-  "seed": 1903144846
+  "rate": "5.33"
 }
