--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "source": "https://www.federalreserve.gov/releases/h15/",
-  "seed": 1804533330,
+  "rate": "5.33",
+  "seed": 37696974,
   "date": "2024-Sep-9",
-  "rate": "5.33"
+  "source": "https://www.federalreserve.gov/releases/h15/"
 }
