--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
+  "seed": 1234953608,
   "rate": "5.33",
-  "seed": 37696974,
-  "date": "2024-Sep-9",
-  "source": "https://www.federalreserve.gov/releases/h15/"
+  "source": "https://www.federalreserve.gov/releases/h15/",
+  "date": "2024-Sep-9"
 }
