--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
   "rate": "5.33",
-  "seed": 424282320,
+  "date": "2024-Sep-9",
   "source": "https://www.federalreserve.gov/releases/h15/",
-  "date": "2024-Sep-9"
+  "seed": 166825553
 }
