--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "seed": 1641701653,
-  "rate": "5.33",
+  "seed": 1166591157,
+  "source": "https://www.federalreserve.gov/releases/h15/",
   "date": "2024-Sep-9",
-  "source": "https://www.federalreserve.gov/releases/h15/"
+  "rate": "5.33"
 }
