--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "seed": 1166591157,
+  "rate": "5.33",
   "source": "https://www.federalreserve.gov/releases/h15/",
-  "date": "2024-Sep-9",
-  "rate": "5.33"
+  "seed": 1290662476,
+  "date": "2024-Sep-9"
 }
