--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
+  "seed": 930915650,
   "rate": "5.33",
-  "source": "https://www.federalreserve.gov/releases/h15/",
-  "seed": 283793629,
-  "date": "2024-Sep-9"
+  "date": "2024-Sep-9",
+  "source": "https://www.federalreserve.gov/releases/h15/"
 }
