--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
   "rate": "5.33",
-  "seed": 65373681,
-  "source": "https://www.federalreserve.gov/releases/h15/",
-  "date": "2024-Sep-10"
+  "date": "2024-Sep-10",
+  "seed": 1952609776,
+  "source": "https://www.federalreserve.gov/releases/h15/"
 }
