--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "seed": 1400556155,
-  "date": "2024-Sep-10",
+  "rate": "5.33",
   "source": "https://www.federalreserve.gov/releases/h15/",
-  "rate": "5.33"
+  "date": "2024-Sep-10",
+  "seed": 921201381
 }
