--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "rate": "5.33",
-  "seed": 688842358,
+  "date": "2024-Sep-10",
   "source": "https://www.federalreserve.gov/releases/h15/",
-  "date": "2024-Sep-10"
+  "rate": "5.33",
+  "seed": 143345145
 }
