--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
+  "seed": 1767820683,
   "date": "2024-Sep-10",
-  "source": "https://www.federalreserve.gov/releases/h15/",
-  "seed": 1187651014,
-  "rate": "5.33"
+  "rate": "5.33",
+  "source": "https://www.federalreserve.gov/releases/h15/"
 }
