--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "seed": 1611268340,
-  "source": "https://www.federalreserve.gov/releases/h15/",
   "rate": "5.33",
-  "date": "2024-Sep-11"
+  "seed": 1739042097,
+  "date": "2024-Sep-11",
+  "source": "https://www.federalreserve.gov/releases/h15/"
 }
