--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "rate": "5.33",
-  "seed": 1219936184,
+  "seed": 1527601068,
+  "source": "https://www.federalreserve.gov/releases/h15/",
   "date": "2024-Sep-11",
-  "source": "https://www.federalreserve.gov/releases/h15/"
+  "rate": "5.33"
 }
