--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "source": "https://www.federalreserve.gov/releases/h15/",
   "date": "2024-Sep-11",
-  "rate": "5.33",
-  "seed": 1139912794
+  "source": "https://www.federalreserve.gov/releases/h15/",
+  "seed": 664116438,
+  "rate": "5.33"
 }
