--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
+  "seed": 457298307,
+  "date": "2024-Sep-11",
   "rate": "5.33",
-  "source": "https://www.federalreserve.gov/releases/h15/",
-  "seed": 1951428474,
-  "date": "2024-Sep-11"
+  "source": "https://www.federalreserve.gov/releases/h15/"
 }
