--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "seed": 2135974567,
-  "date": "2024-Sep-11",
   "source": "https://www.federalreserve.gov/releases/h15/",
-  "rate": "5.33"
+  "seed": 1566359325,
+  "rate": "5.33",
+  "date": "2024-Sep-11"
 }
