--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
   "source": "https://www.federalreserve.gov/releases/h15/",
-  "seed": 1633919892,
-  "date": "2024-Sep-11",
-  "rate": "5.33"
+  "date": "2024-Sep-12",
+  "rate": "5.33",
+  "seed": 614177208
 }
