--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
   "source": "https://www.federalreserve.gov/releases/h15/",
+  "seed": 1309880360,
   "date": "2024-Sep-12",
-  "rate": "5.33",
-  "seed": 614177208
+  "rate": "5.33"
 }
