--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
+  "date": "2024-Sep-12",
   "source": "https://www.federalreserve.gov/releases/h15/",
-  "seed": 1529072015,
-  "rate": "5.33",
-  "date": "2024-Sep-12"
+  "seed": 997116425,
+  "rate": "5.33"
 }
