--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "rate": "5.33",
   "date": "2024-Sep-12",
-  "seed": 1133376513,
-  "source": "https://www.federalreserve.gov/releases/h15/"
+  "seed": 599391640,
+  "source": "https://www.federalreserve.gov/releases/h15/",
+  "rate": "5.33"
 }
