--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
   "source": "https://www.federalreserve.gov/releases/h15/",
-  "date": "2024-Sep-12",
+  "seed": 231541248,
   "rate": "5.33",
-  "seed": 487873689
+  "date": "2024-Sep-12"
 }
