--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "source": "https://www.federalreserve.gov/releases/h15/",
-  "seed": 231541248,
+  "date": "2024-Sep-12",
   "rate": "5.33",
-  "date": "2024-Sep-12"
+  "source": "https://www.federalreserve.gov/releases/h15/",
+  "seed": 289156319
 }
