--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "date": "2024-Sep-12",
+  "date": "2024-Sep-13",
+  "seed": 2096294935,
   "source": "https://www.federalreserve.gov/releases/h15/",
-  "rate": "5.33",
-  "seed": 690948562
+  "rate": "5.33"
 }
