--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
+  "rate": "5.33",
+  "seed": 1448915627,
   "date": "2024-Sep-13",
-  "seed": 2096294935,
-  "source": "https://www.federalreserve.gov/releases/h15/",
-  "rate": "5.33"
+  "source": "https://www.federalreserve.gov/releases/h15/"
 }
