--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
+  "source": "https://www.federalreserve.gov/releases/h15/",
+  "seed": 1587700768,
   "rate": "5.33",
-  "seed": 1448915627,
-  "date": "2024-Sep-13",
-  "source": "https://www.federalreserve.gov/releases/h15/"
+  "date": "2024-Sep-13"
 }
