--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "seed": 996678592,
+  "source": "https://www.federalreserve.gov/releases/h15/",
   "rate": "5.33",
   "date": "2024-Sep-13",
-  "source": "https://www.federalreserve.gov/releases/h15/"
+  "seed": 755385962
 }
