--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "date": "2024-Sep-13",
   "source": "https://www.federalreserve.gov/releases/h15/",
-  "seed": 13356528,
-  "rate": "5.33"
+  "seed": 1413426269,
+  "rate": "5.33",
+  "date": "2024-Sep-13"
 }
