--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
+  "seed": 1466333830,
   "rate": "5.33",
-  "source": "https://www.federalreserve.gov/releases/h15/",
-  "seed": 181992293,
-  "date": "2024-Sep-13"
+  "date": "2024-Sep-13",
+  "source": "https://www.federalreserve.gov/releases/h15/"
 }
