--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "rate": "5.33",
+  "date": "2024-Sep-16",
   "source": "https://www.federalreserve.gov/releases/h15/",
-  "seed": 1591452476,
-  "date": "2024-Sep-13"
+  "rate": "5.33",
+  "seed": 2102829306
 }
