--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "date": "2024-Sep-16",
   "source": "https://www.federalreserve.gov/releases/h15/",
-  "rate": "5.33",
-  "seed": 2102829306
+  "date": "2024-Sep-16",
+  "seed": 1672051410,
+  "rate": "5.33"
 }
