--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
+  "rate": "5.33",
   "source": "https://www.federalreserve.gov/releases/h15/",
-  "date": "2024-Sep-16",
-  "seed": 1672051410,
-  "rate": "5.33"
+  "seed": 598705739,
+  "date": "2024-Sep-16"
 }
