--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
   "rate": "5.33",
+  "date": "2024-Sep-16",
   "source": "https://www.federalreserve.gov/releases/h15/",
-  "seed": 598705739,
-  "date": "2024-Sep-16"
+  "seed": 945120659
 }
