--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
   "source": "https://www.federalreserve.gov/releases/h15/",
-  "date": "2024-Sep-16",
+  "seed": 281328507,
   "rate": "5.33",
-  "seed": 1090998705
+  "date": "2024-Sep-16"
 }
