--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
+  "seed": 1753117277,
+  "date": "2024-Sep-16",
   "source": "https://www.federalreserve.gov/releases/h15/",
-  "seed": 281328507,
-  "rate": "5.33",
-  "date": "2024-Sep-16"
+  "rate": "5.33"
 }
