--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
   "date": "2024-Sep-16",
-  "seed": 1696266152,
+  "source": "https://www.federalreserve.gov/releases/h15/",
   "rate": "5.33",
-  "source": "https://www.federalreserve.gov/releases/h15/"
+  "seed": 752232458
 }
