--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
+  "seed": 262660072,
   "date": "2024-Sep-16",
-  "source": "https://www.federalreserve.gov/releases/h15/",
   "rate": "5.33",
-  "seed": 752232458
+  "source": "https://www.federalreserve.gov/releases/h15/"
 }
