--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
+  "seed": 853400208,
   "date": "2024-Sep-17",
   "rate": "5.33",
-  "source": "https://www.federalreserve.gov/releases/h15/",
-  "seed": 1056727416
+  "source": "https://www.federalreserve.gov/releases/h15/"
 }
