--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "date": "2024-Sep-17",
-  "rate": "5.33",
+  "seed": 723717587,
   "source": "https://www.federalreserve.gov/releases/h15/",
-  "seed": 762697699
+  "date": "2024-Sep-17",
+  "rate": "5.33"
 }
