--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "rate": "5.33",
+  "date": "2024-Sep-17",
+  "seed": 1300262372,
   "source": "https://www.federalreserve.gov/releases/h15/",
-  "seed": 180870830,
-  "date": "2024-Sep-17"
+  "rate": "5.33"
 }
