--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "source": "https://www.federalreserve.gov/releases/h15/",
-  "seed": 920722209,
+  "date": "2024-Sep-17",
   "rate": "5.33",
-  "date": "2024-Sep-17"
+  "seed": 405408892,
+  "source": "https://www.federalreserve.gov/releases/h15/"
 }
