--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
   "date": "2024-Sep-17",
+  "source": "https://www.federalreserve.gov/releases/h15/",
   "rate": "5.33",
-  "seed": 405408892,
-  "source": "https://www.federalreserve.gov/releases/h15/"
+  "seed": 833863037
 }
