--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "source": "https://www.federalreserve.gov/releases/h15/",
+  "seed": 1642067745,
   "date": "2024-Sep-17",
   "rate": "5.33",
-  "seed": 1610403979
+  "source": "https://www.federalreserve.gov/releases/h15/"
 }
