--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "seed": 1642067745,
-  "date": "2024-Sep-17",
+  "source": "https://www.federalreserve.gov/releases/h15/",
   "rate": "5.33",
-  "source": "https://www.federalreserve.gov/releases/h15/"
+  "seed": 1900866450,
+  "date": "2024-Sep-17"
 }
