--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "date": "2024-Sep-18",
-  "seed": 2026563891,
   "rate": "5.33",
-  "source": "https://www.federalreserve.gov/releases/h15/"
+  "seed": 352152847,
+  "source": "https://www.federalreserve.gov/releases/h15/",
+  "date": "2024-Sep-18"
 }
