--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
+  "seed": 1041970202,
+  "date": "2024-Sep-18",
   "rate": "5.33",
-  "seed": 352152847,
-  "source": "https://www.federalreserve.gov/releases/h15/",
-  "date": "2024-Sep-18"
+  "source": "https://www.federalreserve.gov/releases/h15/"
 }
