--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "date": "2024-Sep-18",
   "source": "https://www.federalreserve.gov/releases/h15/",
-  "seed": 1103500493,
-  "rate": "5.33"
+  "seed": 534376059,
+  "rate": "5.33",
+  "date": "2024-Sep-18"
 }
