--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "source": "https://www.federalreserve.gov/releases/h15/",
   "date": "2024-Sep-18",
+  "seed": 2001417542,
   "rate": "5.33",
-  "seed": 768506242
+  "source": "https://www.federalreserve.gov/releases/h15/"
 }
