--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "rate": "5.33",
   "source": "https://www.federalreserve.gov/releases/h15/",
-  "date": "2024-Sep-18",
-  "seed": 2121779492
+  "rate": "5.33",
+  "seed": 1314087706,
+  "date": "2024-Sep-18"
 }
