--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
+  "date": "2024-Sep-18",
   "source": "https://www.federalreserve.gov/releases/h15/",
-  "rate": "5.33",
-  "seed": 1314087706,
-  "date": "2024-Sep-18"
+  "seed": 720649033,
+  "rate": "5.33"
 }
