--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
   "date": "2024-Sep-19",
   "source": "https://www.federalreserve.gov/releases/h15/",
-  "seed": 72831676,
-  "rate": "4.83"
+  "rate": "4.83",
+  "seed": 1004434888
 }
