--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "rate": "4.83",
-  "source": "https://www.federalreserve.gov/releases/h15/",
+  "seed": 755569625,
   "date": "2024-Sep-19",
-  "seed": 1556930556
+  "source": "https://www.federalreserve.gov/releases/h15/",
+  "rate": "4.83"
 }
