--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "seed": 755569625,
+  "seed": 1754949615,
   "date": "2024-Sep-19",
-  "source": "https://www.federalreserve.gov/releases/h15/",
-  "rate": "4.83"
+  "rate": "4.83",
+  "source": "https://www.federalreserve.gov/releases/h15/"
 }
