--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
   "rate": "4.83",
-  "source": "https://www.federalreserve.gov/releases/h15/",
+  "seed": 299141095,
   "date": "2024-Sep-19",
-  "seed": 1248780736
+  "source": "https://www.federalreserve.gov/releases/h15/"
 }
