--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
+  "source": "https://www.federalreserve.gov/releases/h15/",
   "rate": "4.83",
-  "seed": 299141095,
-  "date": "2024-Sep-19",
-  "source": "https://www.federalreserve.gov/releases/h15/"
+  "seed": 1949770805,
+  "date": "2024-Sep-19"
 }
