--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
+  "seed": 2001185088,
   "source": "https://www.federalreserve.gov/releases/h15/",
-  "rate": "4.83",
-  "seed": 1949770805,
-  "date": "2024-Sep-19"
+  "date": "2024-Sep-19",
+  "rate": "4.83"
 }
