--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "seed": 2001185088,
+  "seed": 1570572339,
   "source": "https://www.federalreserve.gov/releases/h15/",
-  "date": "2024-Sep-19",
-  "rate": "4.83"
+  "rate": "4.83",
+  "date": "2024-Sep-20"
 }
