--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
   "date": "2024-Sep-20",
-  "seed": 1365588963,
-  "source": "https://www.federalreserve.gov/releases/h15/",
-  "rate": "4.83"
+  "rate": "4.83",
+  "seed": 1652348324,
+  "source": "https://www.federalreserve.gov/releases/h15/"
 }
