--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
+  "seed": 498430859,
   "date": "2024-Sep-20",
-  "rate": "4.83",
-  "seed": 1652348324,
-  "source": "https://www.federalreserve.gov/releases/h15/"
+  "source": "https://www.federalreserve.gov/releases/h15/",
+  "rate": "4.83"
 }
