--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "seed": 498430859,
+  "rate": "4.83",
   "date": "2024-Sep-20",
   "source": "https://www.federalreserve.gov/releases/h15/",
-  "rate": "4.83"
+  "seed": 81141493
 }
