--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "rate": "4.83",
-  "date": "2024-Sep-20",
+  "seed": 71356147,
   "source": "https://www.federalreserve.gov/releases/h15/",
-  "seed": 81141493
+  "date": "2024-Sep-20",
+  "rate": "4.83"
 }
