--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "date": "2024-Sep-20",
-  "seed": 941581219,
   "rate": "4.83",
-  "source": "https://www.federalreserve.gov/releases/h15/"
+  "seed": 2138143081,
+  "source": "https://www.federalreserve.gov/releases/h15/",
+  "date": "2024-Sep-20"
 }
