--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "rate": "4.83",
-  "seed": 2138143081,
+  "date": "2024-Sep-20",
   "source": "https://www.federalreserve.gov/releases/h15/",
-  "date": "2024-Sep-20"
+  "rate": "4.83",
+  "seed": 1778197851
 }
