--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "date": "2024-Sep-20",
-  "source": "https://www.federalreserve.gov/releases/h15/",
   "rate": "4.83",
-  "seed": 1778197851
+  "seed": 1343536390,
+  "source": "https://www.federalreserve.gov/releases/h15/",
+  "date": "2024-Sep-20"
 }
