--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
   "rate": "4.83",
-  "seed": 1343536390,
-  "source": "https://www.federalreserve.gov/releases/h15/",
-  "date": "2024-Sep-20"
+  "date": "2024-Sep-20",
+  "seed": 215133988,
+  "source": "https://www.federalreserve.gov/releases/h15/"
 }
