--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "seed": 620000589,
-  "source": "https://www.federalreserve.gov/releases/h15/",
+  "seed": 2038287846,
   "rate": "4.83",
-  "date": "2024-Sep-23"
+  "date": "2024-Sep-23",
+  "source": "https://www.federalreserve.gov/releases/h15/"
 }
