--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "rate": "4.83",
-  "date": "2024-Sep-23",
   "source": "https://www.federalreserve.gov/releases/h15/",
-  "seed": 264579359
+  "rate": "4.83",
+  "seed": 698756338,
+  "date": "2024-Sep-23"
 }
