--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "source": "https://www.federalreserve.gov/releases/h15/",
+  "rate": "4.83",
   "date": "2024-Sep-23",
-  "seed": 141668719,
-  "rate": "4.83"
+  "source": "https://www.federalreserve.gov/releases/h15/",
+  "seed": 397353994
 }
