--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
+  "seed": 1295397581,
   "rate": "4.83",
   "date": "2024-Sep-23",
-  "source": "https://www.federalreserve.gov/releases/h15/",
-  "seed": 732630558
+  "source": "https://www.federalreserve.gov/releases/h15/"
 }
