--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "seed": 1295397581,
-  "rate": "4.83",
+  "seed": 437918731,
   "date": "2024-Sep-23",
-  "source": "https://www.federalreserve.gov/releases/h15/"
+  "source": "https://www.federalreserve.gov/releases/h15/",
+  "rate": "4.83"
 }
