--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "seed": 1272500638,
-  "source": "https://www.federalreserve.gov/releases/h15/",
   "date": "2024-Sep-23",
-  "rate": "4.83"
+  "rate": "4.83",
+  "source": "https://www.federalreserve.gov/releases/h15/",
+  "seed": 2030618228
 }
