--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "date": "2024-Sep-23",
-  "rate": "4.83",
   "source": "https://www.federalreserve.gov/releases/h15/",
-  "seed": 2030618228
+  "seed": 1625424278,
+  "date": "2024-Sep-24",
+  "rate": "4.83"
 }
