--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
+  "seed": 636877111,
   "source": "https://www.federalreserve.gov/releases/h15/",
-  "seed": 1625424278,
-  "date": "2024-Sep-24",
-  "rate": "4.83"
+  "rate": "4.83",
+  "date": "2024-Sep-24"
 }
