--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
+  "seed": 1771200067,
+  "rate": "4.83",
   "source": "https://www.federalreserve.gov/releases/h15/",
-  "date": "2024-Sep-24",
-  "seed": 1178772663,
-  "rate": "4.83"
+  "date": "2024-Sep-24"
 }
