--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
+  "date": "2024-Sep-24",
   "source": "https://www.federalreserve.gov/releases/h15/",
-  "seed": 962009645,
   "rate": "4.83",
-  "date": "2024-Sep-24"
+  "seed": 1525579091
 }
