--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "rate": "4.83",
+  "date": "2024-Sep-25",
+  "seed": 1204296942,
   "source": "https://www.federalreserve.gov/releases/h15/",
-  "date": "2024-Sep-24",
-  "seed": 636375675
+  "rate": "4.83"
 }
