--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
   "source": "https://www.federalreserve.gov/releases/h15/",
-  "seed": 1375726623,
-  "date": "2024-Sep-25",
-  "rate": "4.83"
+  "seed": 446266460,
+  "rate": "4.83",
+  "date": "2024-Sep-25"
 }
