--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
+  "date": "2024-Sep-25",
   "source": "https://www.federalreserve.gov/releases/h15/",
-  "seed": 446266460,
   "rate": "4.83",
-  "date": "2024-Sep-25"
+  "seed": 886350190
 }
