--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
+  "seed": 1271196914,
+  "source": "https://www.federalreserve.gov/releases/h15/",
   "rate": "4.83",
-  "seed": 755454231,
-  "date": "2024-Sep-25",
-  "source": "https://www.federalreserve.gov/releases/h15/"
+  "date": "2024-Sep-25"
 }
