--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "seed": 1271196914,
-  "source": "https://www.federalreserve.gov/releases/h15/",
+  "date": "2024-Sep-25",
   "rate": "4.83",
-  "date": "2024-Sep-25"
+  "seed": 1058784873,
+  "source": "https://www.federalreserve.gov/releases/h15/"
 }
