--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
   "date": "2024-Sep-25",
-  "rate": "4.83",
-  "seed": 1058784873,
-  "source": "https://www.federalreserve.gov/releases/h15/"
+  "source": "https://www.federalreserve.gov/releases/h15/",
+  "seed": 73162137,
+  "rate": "4.83"
 }
