--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "date": "2024-Sep-25",
-  "seed": 1372118853,
   "source": "https://www.federalreserve.gov/releases/h15/",
-  "rate": "4.83"
+  "rate": "4.83",
+  "seed": 1618054933,
+  "date": "2024-Sep-25"
 }
