--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "source": "https://www.federalreserve.gov/releases/h15/",
+  "seed": 98711394,
   "rate": "4.83",
-  "seed": 1618054933,
-  "date": "2024-Sep-25"
+  "date": "2024-Sep-26",
+  "source": "https://www.federalreserve.gov/releases/h15/"
 }
