--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
   "rate": "4.83",
-  "date": "2024-Sep-26",
+  "seed": 318940404,
   "source": "https://www.federalreserve.gov/releases/h15/",
-  "seed": 1443090889
+  "date": "2024-Sep-26"
 }
