--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
+  "date": "2024-Sep-26",
   "rate": "4.83",
-  "seed": 318940404,
   "source": "https://www.federalreserve.gov/releases/h15/",
-  "date": "2024-Sep-26"
+  "seed": 1143640866
 }
