--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "date": "2024-Sep-26",
-  "rate": "4.83",
+  "seed": 692624960,
   "source": "https://www.federalreserve.gov/releases/h15/",
-  "seed": 1143640866
+  "date": "2024-Sep-26",
+  "rate": "4.83"
 }
