--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "seed": 692624960,
-  "source": "https://www.federalreserve.gov/releases/h15/",
   "date": "2024-Sep-26",
-  "rate": "4.83"
+  "rate": "4.83",
+  "source": "https://www.federalreserve.gov/releases/h15/",
+  "seed": 1998701996
 }
