--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "date": "2024-Sep-26",
-  "rate": "4.83",
+  "seed": 1116523438,
   "source": "https://www.federalreserve.gov/releases/h15/",
-  "seed": 1998701996
+  "rate": "4.83",
+  "date": "2024-Sep-26"
 }
