--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "rate": "4.83",
-  "seed": 611941094,
   "date": "2024-Sep-26",
-  "source": "https://www.federalreserve.gov/releases/h15/"
+  "source": "https://www.federalreserve.gov/releases/h15/",
+  "seed": 1700669754,
+  "rate": "4.83"
 }
