--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "rate": "4.83",
-  "date": "2024-Sep-27",
+  "seed": 598578756,
   "source": "https://www.federalreserve.gov/releases/h15/",
-  "seed": 2040335000
+  "date": "2024-Sep-27",
+  "rate": "4.83"
 }
