--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "seed": 598578756,
+  "seed": 784535028,
   "source": "https://www.federalreserve.gov/releases/h15/",
-  "date": "2024-Sep-27",
-  "rate": "4.83"
+  "rate": "4.83",
+  "date": "2024-Sep-27"
 }
