--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "seed": 784535028,
-  "source": "https://www.federalreserve.gov/releases/h15/",
   "rate": "4.83",
-  "date": "2024-Sep-27"
+  "source": "https://www.federalreserve.gov/releases/h15/",
+  "date": "2024-Sep-27",
+  "seed": 829535469
 }
