--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
   "rate": "4.83",
-  "source": "https://www.federalreserve.gov/releases/h15/",
+  "seed": 1549009460,
   "date": "2024-Sep-27",
-  "seed": 829535469
+  "source": "https://www.federalreserve.gov/releases/h15/"
 }
