--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
   "date": "2024-Sep-27",
-  "seed": 1346330008,
-  "rate": "4.83",
-  "source": "https://www.federalreserve.gov/releases/h15/"
+  "seed": 1180163244,
+  "source": "https://www.federalreserve.gov/releases/h15/",
+  "rate": "4.83"
 }
