--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
+  "seed": 1695156777,
   "date": "2024-Sep-27",
-  "seed": 1180163244,
-  "source": "https://www.federalreserve.gov/releases/h15/",
-  "rate": "4.83"
+  "rate": "4.83",
+  "source": "https://www.federalreserve.gov/releases/h15/"
 }
