--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "seed": 1695156777,
-  "date": "2024-Sep-27",
+  "seed": 51972512,
   "rate": "4.83",
-  "source": "https://www.federalreserve.gov/releases/h15/"
+  "source": "https://www.federalreserve.gov/releases/h15/",
+  "date": "2024-Sep-27"
 }
