--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
   "date": "2024-Sep-27",
+  "rate": "4.83",
   "source": "https://www.federalreserve.gov/releases/h15/",
-  "seed": 1827028259,
-  "rate": "4.83"
+  "seed": 397763526
 }
