--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
+  "date": "2024-Sep-30",
   "source": "https://www.federalreserve.gov/releases/h15/",
-  "date": "2024-Sep-27",
-  "rate": "4.83",
-  "seed": 1407353692
+  "seed": 105558636,
+  "rate": "4.83"
 }
