--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
+  "rate": "4.83",
   "date": "2024-Sep-30",
-  "source": "https://www.federalreserve.gov/releases/h15/",
-  "seed": 105558636,
-  "rate": "4.83"
+  "seed": 1371600349,
+  "source": "https://www.federalreserve.gov/releases/h15/"
 }
