--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "seed": 756343260,
-  "date": "2024-Sep-30",
+  "rate": "4.83",
   "source": "https://www.federalreserve.gov/releases/h15/",
-  "rate": "4.83"
+  "seed": 669773174,
+  "date": "2024-Sep-30"
 }
