--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "seed": 1742630414,
   "date": "2024-Sep-30",
-  "source": "https://www.federalreserve.gov/releases/h15/",
-  "rate": "4.83"
+  "seed": 135170838,
+  "rate": "4.83",
+  "source": "https://www.federalreserve.gov/releases/h15/"
 }
