--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "date": "2024-Sep-30",
-  "seed": 776543367,
   "rate": "4.83",
-  "source": "https://www.federalreserve.gov/releases/h15/"
+  "seed": 2015432422,
+  "source": "https://www.federalreserve.gov/releases/h15/",
+  "date": "2024-Sep-30"
 }
