--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
+  "seed": 884604863,
   "rate": "4.83",
-  "seed": 2015432422,
-  "source": "https://www.federalreserve.gov/releases/h15/",
-  "date": "2024-Sep-30"
+  "date": "2024-Sep-30",
+  "source": "https://www.federalreserve.gov/releases/h15/"
 }
