--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "seed": 884604863,
-  "rate": "4.83",
   "date": "2024-Sep-30",
-  "source": "https://www.federalreserve.gov/releases/h15/"
+  "rate": "4.83",
+  "source": "https://www.federalreserve.gov/releases/h15/",
+  "seed": 1296897825
 }
