--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "date": "2024-Sep-30",
+  "seed": 1213280469,
   "source": "https://www.federalreserve.gov/releases/h15/",
-  "seed": 697609807,
-  "rate": "4.83"
+  "rate": "4.83",
+  "date": "2024-Oct-1"
 }
