--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "seed": 1213280469,
-  "source": "https://www.federalreserve.gov/releases/h15/",
   "rate": "4.83",
-  "date": "2024-Oct-1"
+  "seed": 1969413029,
+  "date": "2024-Oct-1",
+  "source": "https://www.federalreserve.gov/releases/h15/"
 }
