--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "seed": 744245943,
-  "rate": "4.83",
   "source": "https://www.federalreserve.gov/releases/h15/",
-  "date": "2024-Oct-1"
+  "seed": 1372943090,
+  "date": "2024-Oct-1",
+  "rate": "4.83"
 }
