--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
   "source": "https://www.federalreserve.gov/releases/h15/",
-  "seed": 1372943090,
-  "date": "2024-Oct-1",
-  "rate": "4.83"
+  "rate": "4.83",
+  "seed": 401573027,
+  "date": "2024-Oct-1"
 }
