--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
+  "date": "2024-Oct-1",
   "source": "https://www.federalreserve.gov/releases/h15/",
-  "rate": "4.83",
-  "seed": 401573027,
-  "date": "2024-Oct-1"
+  "seed": 811545840,
+  "rate": "4.83"
 }
