--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "source": "https://www.federalreserve.gov/releases/h15/",
-  "seed": 1980690702,
   "rate": "4.83",
-  "date": "2024-Oct-1"
+  "source": "https://www.federalreserve.gov/releases/h15/",
+  "date": "2024-Oct-1",
+  "seed": 1990966790
 }
