--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "seed": 1914456981,
+  "date": "2024-Oct-2",
   "rate": "4.83",
-  "source": "https://www.federalreserve.gov/releases/h15/",
-  "date": "2024-Oct-2"
+  "seed": 773433274,
+  "source": "https://www.federalreserve.gov/releases/h15/"
 }
