--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
   "date": "2024-Oct-2",
-  "rate": "4.83",
-  "seed": 773433274,
-  "source": "https://www.federalreserve.gov/releases/h15/"
+  "seed": 608818389,
+  "source": "https://www.federalreserve.gov/releases/h15/",
+  "rate": "4.83"
 }
