--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "seed": 303114109,
   "source": "https://www.federalreserve.gov/releases/h15/",
   "date": "2024-Oct-2",
-  "rate": "4.83"
+  "rate": "4.83",
+  "seed": 615226900
 }
