--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "source": "https://www.federalreserve.gov/releases/h15/",
+  "seed": 1704200938,
   "date": "2024-Oct-2",
-  "rate": "4.83",
-  "seed": 615226900
+  "source": "https://www.federalreserve.gov/releases/h15/",
+  "rate": "4.83"
 }
