--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
   "source": "https://www.federalreserve.gov/releases/h15/",
-  "seed": 318464380,
-  "date": "2024-Oct-2",
-  "rate": "4.83"
+  "rate": "4.83",
+  "seed": 957161092,
+  "date": "2024-Oct-2"
 }
