--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
   "source": "https://www.federalreserve.gov/releases/h15/",
+  "date": "2024-Oct-3",
   "rate": "4.83",
-  "seed": 957161092,
-  "date": "2024-Oct-2"
+  "seed": 1097439220
 }
