--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
+  "seed": 559911698,
   "source": "https://www.federalreserve.gov/releases/h15/",
   "date": "2024-Oct-3",
-  "rate": "4.83",
-  "seed": 1097439220
+  "rate": "4.83"
 }
