--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
   "source": "https://www.federalreserve.gov/releases/h15/",
-  "seed": 870768943,
-  "rate": "4.83",
-  "date": "2024-Oct-3"
+  "seed": 1656255604,
+  "date": "2024-Oct-3",
+  "rate": "4.83"
 }
