--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
   "rate": "4.83",
-  "source": "https://www.federalreserve.gov/releases/h15/",
-  "seed": 2119779707,
-  "date": "2024-Oct-3"
+  "seed": 311830816,
+  "date": "2024-Oct-3",
+  "source": "https://www.federalreserve.gov/releases/h15/"
 }
