--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "source": "https://www.federalreserve.gov/releases/h15/",
-  "seed": 1113823031,
+  "seed": 835245315,
+  "rate": "4.83",
   "date": "2024-Oct-4",
-  "rate": "4.83"
+  "source": "https://www.federalreserve.gov/releases/h15/"
 }
