--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
+  "date": "2024-Oct-4",
+  "seed": 636827464,
   "rate": "4.83",
-  "seed": 1151657353,
-  "source": "https://www.federalreserve.gov/releases/h15/",
-  "date": "2024-Oct-4"
+  "source": "https://www.federalreserve.gov/releases/h15/"
 }
