--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
   "date": "2024-Oct-4",
-  "source": "https://www.federalreserve.gov/releases/h15/",
-  "seed": 98778509,
-  "rate": "4.83"
+  "rate": "4.83",
+  "seed": 817280263,
+  "source": "https://www.federalreserve.gov/releases/h15/"
 }
