--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "date": "2024-Oct-7",
+  "source": "https://www.federalreserve.gov/releases/h15/",
+  "seed": 1571006513,
   "rate": "4.83",
-  "seed": 1783388345,
-  "source": "https://www.federalreserve.gov/releases/h15/"
+  "date": "2024-Oct-7"
 }
