--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
+  "seed": 1102174119,
   "source": "https://www.federalreserve.gov/releases/h15/",
-  "seed": 1571006513,
-  "rate": "4.83",
-  "date": "2024-Oct-7"
+  "date": "2024-Oct-7",
+  "rate": "4.83"
 }
