--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
   "rate": "4.83",
-  "source": "https://www.federalreserve.gov/releases/h15/",
-  "seed": 1514789778,
-  "date": "2024-Oct-7"
+  "seed": 1397534515,
+  "date": "2024-Oct-7",
+  "source": "https://www.federalreserve.gov/releases/h15/"
 }
