--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "date": "2024-Oct-8",
   "rate": "4.83",
-  "seed": 18754569,
-  "source": "https://www.federalreserve.gov/releases/h15/"
+  "date": "2024-Oct-8",
+  "source": "https://www.federalreserve.gov/releases/h15/",
+  "seed": 882901420
 }
