--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "date": "2024-Oct-8",
   "rate": "4.83",
-  "seed": 368563034,
-  "source": "https://www.federalreserve.gov/releases/h15/"
+  "date": "2024-Oct-8",
+  "source": "https://www.federalreserve.gov/releases/h15/",
+  "seed": 2032958495
 }
