--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "rate": "4.83",
-  "date": "2024-Oct-8",
   "source": "https://www.federalreserve.gov/releases/h15/",
-  "seed": 2032958495
+  "date": "2024-Oct-8",
+  "seed": 1462400492,
+  "rate": "4.83"
 }
