--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
+  "source": "https://www.federalreserve.gov/releases/h15/",
   "date": "2024-Oct-8",
-  "seed": 1806137336,
-  "rate": "4.83",
-  "source": "https://www.federalreserve.gov/releases/h15/"
+  "seed": 806354799,
+  "rate": "4.83"
 }
