--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
+  "seed": 399434203,
   "source": "https://www.federalreserve.gov/releases/h15/",
-  "date": "2024-Oct-9",
   "rate": "4.83",
-  "seed": 148113349
+  "date": "2024-Oct-9"
 }
