--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "seed": 164840709,
-  "source": "https://www.federalreserve.gov/releases/h15/",
   "rate": "4.83",
-  "date": "2024-Oct-9"
+  "seed": 648897118,
+  "date": "2024-Oct-9",
+  "source": "https://www.federalreserve.gov/releases/h15/"
 }
