--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "seed": 1002328470,
-  "date": "2024-Oct-9",
+  "rate": "4.83",
+  "seed": 528387138,
   "source": "https://www.federalreserve.gov/releases/h15/",
-  "rate": "4.83"
+  "date": "2024-Oct-9"
 }
