--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "rate": "4.83",
-  "seed": 528387138,
+  "seed": 1886318453,
   "source": "https://www.federalreserve.gov/releases/h15/",
-  "date": "2024-Oct-9"
+  "date": "2024-Oct-9",
+  "rate": "4.83"
 }
