--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "seed": 1886318453,
+  "rate": "4.83",
   "source": "https://www.federalreserve.gov/releases/h15/",
-  "date": "2024-Oct-9",
-  "rate": "4.83"
+  "seed": 2072438639,
+  "date": "2024-Oct-10"
 }
