--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
+  "date": "2024-Oct-10",
   "source": "https://www.federalreserve.gov/releases/h15/",
   "rate": "4.83",
-  "seed": 1585013796,
-  "date": "2024-Oct-10"
+  "seed": 289790484
 }
