--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "source": "https://www.federalreserve.gov/releases/h15/",
+  "rate": "4.83",
   "date": "2024-Oct-10",
-  "seed": 159777944,
-  "rate": "4.83"
+  "seed": 123071947,
+  "source": "https://www.federalreserve.gov/releases/h15/"
 }
