--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "seed": 1851161136,
+  "source": "https://www.federalreserve.gov/releases/h15/",
   "date": "2024-Oct-10",
-  "rate": "4.83",
-  "source": "https://www.federalreserve.gov/releases/h15/"
+  "seed": 372977556,
+  "rate": "4.83"
 }
