--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "date": "2024-Oct-10",
+  "seed": 526703577,
   "source": "https://www.federalreserve.gov/releases/h15/",
-  "seed": 824031145,
-  "rate": "4.83"
+  "rate": "4.83",
+  "date": "2024-Oct-10"
 }
