--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "seed": 1958244393,
-  "rate": "4.83",
   "source": "https://www.federalreserve.gov/releases/h15/",
-  "date": "2024-Oct-10"
+  "seed": 775452235,
+  "date": "2024-Oct-10",
+  "rate": "4.83"
 }
