--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "source": "https://www.federalreserve.gov/releases/h15/",
-  "date": "2024-Oct-10",
+  "seed": 1955446277,
   "rate": "4.83",
-  "seed": 1988854323
+  "source": "https://www.federalreserve.gov/releases/h15/",
+  "date": "2024-Oct-10"
 }
