--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "seed": 1955446277,
   "rate": "4.83",
+  "date": "2024-Oct-10",
   "source": "https://www.federalreserve.gov/releases/h15/",
-  "date": "2024-Oct-10"
+  "seed": 2138003841
 }
