--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "date": "2024-Oct-10",
-  "seed": 951902668,
+  "rate": "4.83",
+  "seed": 2038917999,
   "source": "https://www.federalreserve.gov/releases/h15/",
-  "rate": "4.83"
+  "date": "2024-Oct-14*"
 }
