--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
   "rate": "4.83",
-  "seed": 2038917999,
   "source": "https://www.federalreserve.gov/releases/h15/",
-  "date": "2024-Oct-14*"
+  "date": "2024-Oct-14*",
+  "seed": 884964163
 }
