--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "date": "2024-Oct-14*",
   "source": "https://www.federalreserve.gov/releases/h15/",
-  "rate": "4.83",
-  "seed": 1298392164
+  "date": "2024-Oct-14*",
+  "seed": 17193057,
+  "rate": "4.83"
 }
