--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "source": "https://www.federalreserve.gov/releases/h15/",
-  "seed": 313284832,
   "rate": "4.83",
-  "date": "2024-Oct-14*"
+  "seed": 80455930,
+  "date": "2024-Oct-14*",
+  "source": "https://www.federalreserve.gov/releases/h15/"
 }
