--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "rate": "4.83",
-  "seed": 80455930,
   "date": "2024-Oct-14*",
-  "source": "https://www.federalreserve.gov/releases/h15/"
+  "seed": 1015574358,
+  "source": "https://www.federalreserve.gov/releases/h15/",
+  "rate": "4.83"
 }
