--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "date": "2024-Oct-14*",
-  "seed": 1015574358,
+  "rate": "4.83",
+  "seed": 424584180,
   "source": "https://www.federalreserve.gov/releases/h15/",
-  "rate": "4.83"
+  "date": "2024-Oct-14*"
 }
