--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
+  "seed": 2072810290,
   "source": "https://www.federalreserve.gov/releases/h15/",
-  "date": "2024-Oct-15",
   "rate": "4.83",
-  "seed": 1022368747
+  "date": "2024-Oct-15"
 }
